	PR ld/10744 	* ldlang.c (lang_new_phdr): Allow FILEHDR/PHDRS on more than the 	first PT_LOAD header. 	* ld.texinfo: Update.